<resources>
    <string name="app_name">End_Point</string>
    <string name="user_name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="field_req">Field required</string>
    <string name="pass_short">Password to short</string>
    <string name="cam_pem_denied">Camera permission denied</string>
    <string name="email">Email</string>
    <string name="inv_email">Invalid email</string>
    <string name="wait">Wait...</string>
    <string name="inv_em_ps">Invalid Email or Password</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="my_times">MY Times</string>
    <string name="no_times_to_display">No Times To Display</string>
    <string name="date">Date : </string>
    <string name="attendance_time">Attendance Time : </string>
    <string name="departure_time">Departure Time : </string>
    <string name="time_plus">Time Plus : </string>
    <string name="late_status">Late Status : </string>
    <string name="number_of_mins">Work Hour : </string>
    <string name="logout">Logout</string>
    <string name="language_settings">Language Settings</string>
    <string name="cancel">Cancel</string>
    <string name="open_scan_code">Open Scan Code</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="notifications">notifications</string>
    <string name="ok">Ok</string>
    <string name="inc_code">Incorrect code</string>

</resources>
